# Xiaoyuzhou_PodcastToText

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
src/: audio.py  config.py  main.py  utils.py
src/diarization/: speaker_diarization.py
src/models/: schemas.py
src/processor/: llm_processor.py  prompt.py
src/scraper/: xiaoyuzhou.py
src/transcriber/: base.py  local.py  xunfei.py
tests/: test_processor.py  test_scraper.py  test_utils.py
